Пререлиз, добавлены тесты. Далее нужно прописать docstring, readme

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,12 @@ repos:
     rev: v1.18.1
     hooks:
       - id: mypy
-        args: [--show-error-codes, --pretty]
+        args: [
+          --show-error-codes,
+          --pretty,
+          --ignore-missing-imports,
+          --disable-error-code=operator
+        ]
         additional_dependencies:
           - types-requests
           - types-PyYAML
